--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.3",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "pg": "^7.8.0"
   },
   "devDependencies": {
     "concurrently": "^4.1.2",
